created new weather bundle, removed acme bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
 app:
-    resource: "@AppBundle/Controller/"
+    resource: "@WeatherWeatherBundle/Controller/"
     type:     annotation
+    prefix:   /
